# fastapi_template

./: .gitignore  Dockerfile  README.md  config.yml  pyproject.toml
app/: main.py  security_api.py  settings.py
app/controllers/: sample_controller.py
app/models/: bearer_auth.py  sample_request.py  sample_response.py  token_data.py
app/services/: sample_service.py  security_impl.py
app/store/: factory.py  sample_store_abc.py
app/store/impl/: inmemory_sample_store.py
tasks/: __init__.py  config.py  docker.py
